[gd_scene load_steps=3 format=3 uid="uid://bkxrgsqbr10nw"]

[ext_resource type="Theme" uid="uid://budipvsn6w6vj" path="res://utils/ui_theme.tres" id="1_7ka58"]
[ext_resource type="Script" uid="uid://be8tipllxejuv" path="res://ui/app_settings_menu/app_settings_menu.gd" id="1_ka05k"]

[node name="AppSettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -672.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7ka58")
script = ExtResource("1_ka05k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SFXVolumeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/SettingsContainer/SFXVolumeContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/SettingsContainer/SFXVolumeContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
